@@ -110,6 +110,22 @@ name|hadoop
 operator|.
 name|util
 operator|.
+name|DiskChecker
+operator|.
+name|DiskErrorException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
 name|Shell
 import|;
 end_import
@@ -1635,7 +1651,126 @@ parameter_list|)
 block|{
 name|fail
 argument_list|(
-literal|"Lack of configuration should not have thrown an NPE."
+literal|"Lack of configuration should not have thrown a NPE."
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|NEW_CONTEXT
+init|=
+name|CONTEXT
+operator|+
+literal|".new"
+decl_stmt|;
+name|conf1
+operator|.
+name|set
+argument_list|(
+name|NEW_CONTEXT
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|LocalDirAllocator
+name|newDirAllocator
+init|=
+operator|new
+name|LocalDirAllocator
+argument_list|(
+name|NEW_CONTEXT
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|newDirAllocator
+operator|.
+name|getLocalPathForWrite
+argument_list|(
+literal|"/test"
+argument_list|,
+name|conf1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Exception not thrown when "
+operator|+
+name|NEW_CONTEXT
+operator|+
+literal|" is set to empty string"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|instanceof
+name|DiskErrorException
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{
+name|fail
+argument_list|(
+literal|"Wrong configuration should not have thrown a NPE."
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+name|newDirAllocator
+operator|.
+name|getLocalPathToRead
+argument_list|(
+literal|"/test"
+argument_list|,
+name|conf1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Exception not thrown when "
+operator|+
+name|NEW_CONTEXT
+operator|+
+literal|" is set to empty string"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|instanceof
+name|DiskErrorException
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{
+name|fail
+argument_list|(
+literal|"Wrong configuration should not have thrown a NPE."
 argument_list|)
 expr_stmt|;
 block|}
